version 0.9
  * Init of plugin

version 1.0
  * First working version with supporting mp4 streams

version 1.1
  * Further improvments allowing more file types fo be played

version 1.2
  * Show Thumbernails
  * Show sub/raw icon

version 1.3
  * Fix for when module storage server is not found